--- a/cart.html
+++ b/cart.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keranjang Belanja</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WalzShop — Cart</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="header">
-        <nav class="navbar">
-            <a href="index.html" class="nav-item">Beranda</a>
-            <a href="game.html" class="nav-item">Koleksi</a>
-            <a href="cart.html" class="nav-item"><i class="fas fa-shopping-cart"></i> Keranjang</a>
-        </nav>
-    </header>
+<header class="header">
+  <div class="container">
+    <div class="logo">WalzShop</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="game.html">Games</a>
+      <a href="cart.html">Cart</a>
+    </nav>
+  </div>
+</header>
 
-    <main class="main-content cart-page">
-        <h1 class="page-title">Keranjang Belanja Anda</h1>
-        
-        <section class="cart-container">
-            <div class="cart-items" id="cart-items-list">
-                <div class="empty-cart-message" id="empty-cart-message">
-                    <i class="fas fa-box-open empty-icon"></i>
-                    <p>Keranjang belanja Anda masih kosong.</p>
-                    <a href="game.html" class="btn-primary">Mulai Belanja</a>
-                </div>
-            </div>
+<main class="main">
+  <section class="games-section scroll-reveal">
+    <h2 class="section-title">Cart Anda</h2>
+    <div class="form-container">
+      <table class="summary-table">
+        <tr>
+          <td>Diamond 50</td>
+          <td>Rp 50.000</td>
+        </tr>
+        <tr>
+          <td>Diamond 100</td>
+          <td>Rp 100.000</td>
+        </tr>
+      </table>
+      <div class="summary-total">
+        <span>Total</span>
+        <span>Rp 150.000</span>
+      </div>
+      <button class="btn btn-confirm btn-block">Checkout</button>
+    </div>
+  </section>
+</main>
 
-            <div class="checkout-summary" id="checkout-summary">
-                <div class="summary-box">
-                    <h3>Ringkasan Belanja</h3>
-                    <div class="summary-row">
-                        <span>Total Item:</span>
-                        <span id="total-items">0</span>
-                    </div>
-                    <div class="summary-row">
-                        <span>Total Harga:</span>
-                        <span id="total-price">Rp 0</span>
-                    </div>
-                </div>
+<footer class="footer scroll-reveal">
+  <div class="container">
+    <div class="footer-links">
+      <a href="#">Privacy Policy</a> | 
+      <a href="#">Terms</a> | 
+      <a href="#">Contact</a>
+    </div>
+    <p>&copy; 2025 WalzShop. All Rights Reserved.</p>
+  </div>
+</footer>
 
-                <div class="payment-section">
-                    <h3>Metode Pembayaran</h3>
-                    <div class="qris-container">
-                        <p class="scan-text">Scan QRIS di bawah ini untuk menyelesaikan pembayaran Anda.</p>
-                        <img src="https://files.catbox.moe/pa0iwo.png" alt="QRIS Code" class="qris-image">
-                        <button class="btn-checkout">Bayar Sekarang</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="main-footer">
-        <p>&copy; 2024 Toko Game. Semua Hak Cipta Dilindungi.</p>
-    </footer>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
