--- a/index.html
+++ b/index.html
@@ -1,77 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WalzShop — Top Up</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top-Up Game Murah & Cepat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="logo">TopUpKuy</a>
+            <nav class="nav">
+                <a href="index.html">Home</a>
+                <a href="#">Promo</a>
+                <a href="#">Kontak</a>
+            </nav>
+        </div>
+    </header>
 
-<header class="header">
-  <div class="container">
-    <div class="logo">WalzShop</div>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="game.html">Games</a>
-      <a href="cart.html">Cart</a>
-    </nav>
-  </div>
-</header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Top-Up Game Favoritmu Sekarang!</h1>
+                <p>Proses cepat, aman, dan harga paling terjangkau.</p>
+                <a href="#game-list" class="cta-button">Lihat Game</a>
+            </div>
+        </section>
 
-<main class="main">
-  <!-- Promo Slider -->
-  <section class="promo-section scroll-reveal">
-    <h2 class="section-title">Promo Terbaru</h2>
-    <div class="slider">
-      <div class="slider__track">
-        <div class="slider__item" style="background-image:url('https://i.ibb.co/9yX1GHp/promo1.jpg')"></div>
-        <div class="slider__item" style="background-image:url('https://i.ibb.co/Kq8P1rK/promo2.jpg')"></div>
-        <div class="slider__item" style="background-image:url('https://i.ibb.co/3d2D0fZ/promo3.jpg')"></div>
-      </div>
-      <div class="slider__dots">
-        <span class="active"></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </section>
+        <section class="section">
+            <div class="container">
+                <h2>Game Terpopuler</h2>
+                <div class="game-list" id="game-list">
+                    </div>
+            </div>
+        </section>
 
-  <!-- Games Section -->
-  <section class="games-section scroll-reveal">
-    <h2 class="section-title">Pilihan Game</h2>
-    <div class="games-grid">
-      <div class="game-card scroll-reveal">
-        <img src="https://i.ibb.co/fdqVhL6/ml.png" alt="Mobile Legends">
-        <div class="game-name">Mobile Legends</div>
-      </div>
-      <div class="game-card scroll-reveal">
-        <img src="https://i.ibb.co/0Jr1v4F/pubg.png" alt="PUBG Mobile">
-        <div class="game-name">PUBG Mobile</div>
-      </div>
-      <div class="game-card scroll-reveal">
-        <img src="https://i.ibb.co/B2jZ9wF/freefire.png" alt="Free Fire">
-        <div class="game-name">Free Fire</div>
-      </div>
-      <div class="game-card scroll-reveal">
-        <img src="https://i.ibb.co/jyYyKzP/valorant.png" alt="Valorant">
-        <div class="game-name">Valorant</div>
-      </div>
-    </div>
-  </section>
-</main>
+        <section class="section">
+            <div class="container">
+                <h2>Promo Spesial</h2>
+                <div class="promo-list" id="promo-list">
+                    </div>
+            </div>
+        </section>
+    </main>
 
-<footer class="footer scroll-reveal">
-  <div class="container">
-    <div class="footer-links">
-      <a href="#">Privacy Policy</a> | 
-      <a href="#">Terms</a> | 
-      <a href="#">Contact</a>
-    </div>
-    <p>&copy; 2025 WalzShop. All Rights Reserved.</p>
-  </div>
-</footer>
+    <footer class="footer">
+        <p>&copy; 2025 TopUpKuy. Semua Hak Cipta Dilindungi.</p>
+    </footer>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
