--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">TopUpKuy</a>
+            <a href="index.html" class="logo">WalzShop</a>
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="#">Promo</a>
@@ -45,7 +45,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 TopUpKuy. Semua Hak Cipta Dilindungi.</p>
+        <p>&copy; 2025 WalzShop. Semua Hak Cipta Dilindungi.</p>
     </footer>
 
     <script src="script.js"></script>
