--- a/game.html
+++ b/game.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top-Up Game - WalzShop</title>
+    <title>Top-Up Game - NexGen TopUp</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">TopUpKuy</a>
+            <h1 class="logo"><a href="index.html">NexGen TopUp</a></h1>
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="#">Promo</a>
@@ -18,11 +19,17 @@
         </div>
     </header>
 
-    <main class="container" id="game-page-container">
-        </main>
+    <main>
+        <section class="page-container">
+            <div class="container" id="game-page-container">
+                </div>
+        </section>
+    </main>
 
     <footer class="footer">
-        <p>&copy; 2025 TopUpKuy. Semua Hak Cipta Dilindungi.</p>
+        <div class="container">
+            <p>&copy; 2025 NexGen TopUp. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
