--- a/cart.html
+++ b/cart.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keranjang Belanja - WalzShop</title>
+    <title>Ringkasan Pembelian - NexGen TopUp</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">TopUpKuy</a>
+            <h1 class="logo"><a href="index.html">NexGen TopUp</a></h1>
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="#">Promo</a>
@@ -18,35 +19,49 @@
         </div>
     </header>
 
-    <main class="container">
-        <h2>Ringkasan Pembelian</h2>
-        <div class="cart-summary">
-            <div class="cart-item">
-                <img id="cart-game-img" src="" alt="Game Image">
-                <div class="item-details">
-                    <h3 id="cart-game-name"></h3>
-                    <p id="cart-user-id"></p>
-                    <p id="cart-server-id" style="display:none;"></p>
-                    <p id="cart-product-label"></p>
-                </div>
-            </div>
-            
-            <div class="cart-item">
-                <img id="cart-payment-img" src="" alt="Payment Method">
-                <div class="item-details">
-                    <h3>Metode Pembayaran</h3>
-                    <p id="cart-payment-name"></p>
-                    <p id="cart-payment-info"></p>
-                </div>
-            </div>
+    <main>
+        <section class="page-container">
+            <div class="container">
+                <h2 class="section-title">Ringkasan Pembelian</h2>
+                <div class="cart-summary" id="cart-summary">
+                    <div class="cart-item">
+                        <img id="cart-game-img" src="" alt="Game Image" class="cart-item-img">
+                        <div class="cart-details">
+                            <h3 id="cart-game-name"></h3>
+                            <p id="cart-user-id"></p>
+                            <p id="cart-server-id" style="display:none;"></p>
+                        </div>
+                    </div>
+                    
+                    <div class="cart-item">
+                        <img src="https://via.placeholder.com/80" alt="Product Icon" class="cart-item-img" style="border:none;">
+                        <div class="cart-details">
+                            <h3>Produk</h3>
+                            <p id="cart-product-label"></p>
+                        </div>
+                    </div>
 
-            <div class="total-price" id="cart-total-price"></div>
-            <button class="checkout-button" onclick="window.location.href = '#'; alert('Pesanan Anda berhasil dibuat!');">Selesaikan Pembayaran</button>
-        </div>
+                    <div class="cart-item">
+                        <img id="cart-payment-img" src="" alt="Payment Logo" class="cart-item-img">
+                        <div class="cart-details">
+                            <h3>Metode Pembayaran</h3>
+                            <p id="cart-payment-name"></p>
+                            <div id="cart-payment-info"></div>
+                        </div>
+                    </div>
+
+                    <div id="cart-total-price" class="total-price"></div>
+
+                    <a href="#" class="submit-button active" style="text-align: center;">Konfirmasi Pembayaran</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 WalzShop. Semua Hak Cipta Dilindungi.</p>
+        <div class="container">
+            <p>&copy; 2025 NexGen TopUp. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
