--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top-Up Game Murah & Cepat</title>
+    <title>NexGen TopUp</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">WalzShop</a>
+            <h1 class="logo"><a href="index.html">NexGen TopUp</a></h1>
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="#">Promo</a>
@@ -19,33 +20,36 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero-section">
             <div class="container">
-                <h1>Top-Up Game Favoritmu Sekarang!</h1>
-                <p>Proses cepat, aman, dan harga paling terjangkau.</p>
-                <a href="#game-list" class="cta-button">Lihat Game</a>
+                <div class="hero-content">
+                    <h2>Top-up Game Tanpa Ribet</h2>
+                    <p>Proses cepat, aman, dan harga terbaik. Dapatkan diamond dan item eksklusif sekarang juga!</p>
+                </div>
             </div>
         </section>
 
-        <section class="section">
+        <section class="content-section">
             <div class="container">
-                <h2>Game Terpopuler</h2>
-                <div class="game-list" id="game-list">
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
+                <div id="game-list" class="game-grid">
                     </div>
             </div>
         </section>
 
-        <section class="section">
+        <section class="content-section promo-section">
             <div class="container">
-                <h2>Promo Spesial</h2>
-                <div class="promo-list" id="promo-list">
+                <h2 class="section-title">Promo Eksklusif Hari Ini</h2>
+                <div id="promo-list" class="promo-carousel">
                     </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 WalzShop. Semua Hak Cipta Dilindungi.</p>
+        <div class="container">
+            <p>&copy; 2025 NexGen TopUp. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
