--- a/index.html
+++ b/index.html
@@ -8,49 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1 class="logo"><a href="index.html">NexGen TopUp</a></h1>
-            <nav class="nav">
-                <a href="index.html">Home</a>
-                <a href="#">Promo</a>
-                <a href="#">Kontak</a>
-            </nav>
-        </div>
-    </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="container">
-                <div class="hero-content">
-                    <h2>Top-up Game Tanpa Ribet</h2>
-                    <p>Proses cepat, aman, dan harga terbaik. Dapatkan diamond dan item eksklusif sekarang juga!</p>
+    <div class="main-container">
+
+        <header class="custom-header">
+            <div class="header-content">
+                <span class="header-text">aplikasi Lapakhuda</span>
+                <span class="header-text-sub">Hadir di Playstore</span>
+            </div>
+            <a href="#" class="download-button">Download Sekarang</a>
+        </header>
+
+        <main class="game-selection-main">
+            <div class="game-grid-custom" id="game-list">
                 </div>
-            </div>
-        </section>
-
-        <section class="content-section">
-            <div class="container">
-                <h2 class="section-title">Pilih Game Favoritmu</h2>
-                <div id="game-list" class="game-grid">
-                    </div>
-            </div>
-        </section>
-
-        <section class="content-section promo-section">
-            <div class="container">
-                <h2 class="section-title">Promo Eksklusif Hari Ini</h2>
-                <div id="promo-list" class="promo-carousel">
-                    </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 NexGen TopUp. All rights reserved.</p>
-        </div>
-    </footer>
+        </main>
+    </div>
 
     <script src="script.js"></script>
 </body>
