--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexGen TopUp</title>
+    <title>WALZSHOP</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="main-container">
-
-        <header class="custom-header">
-            <div class="header-content">
-                <span class="header-text">aplikasi Lapakhuda</span>
-                <span class="header-text-sub">Hadir di Playstore</span>
-            </div>
-            <a href="#" class="download-button">Download Sekarang</a>
-        </header>
 
         <main class="game-selection-main">
             <div class="game-grid-custom" id="game-list">
