--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 
     <div class="main-container">
+        <div class="carousel-container">
+            <div class="carousel-slide" id="carousel-slide">
+                </div>
+            <div class="carousel-dots" id="carousel-dots"></div>
+        </div>
 
         <main class="game-selection-main">
             <div class="game-grid-custom" id="game-list">
