--- a/index.html
+++ b/index.html
@@ -10,17 +10,52 @@
 <body>
 
     <div class="main-container">
+        
         <div class="carousel-container">
             <div class="carousel-slide" id="carousel-slide">
-                </div>
+            </div>
             <div class="carousel-dots" id="carousel-dots"></div>
         </div>
 
         <main class="game-selection-main">
             <div class="game-grid-custom" id="game-list">
-                </div>
+            </div>
         </main>
     </div>
+
+    <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h4 class="footer-logo">WALZSHOP</h4>
+                <p>Website Top Up Game Terpercaya</p>
+                <div class="social-icons">
+                    <a href="#"><img src="https://files.catbox.moe/8bcn1a.png" alt="Facebook"></a>
+                    <a href="#"><img src="https://files.catbox.moe/7h98v9.png" alt="Instagram"></a>
+                    <a href="#"><img src="https://files.catbox.moe/h1x74e.png" alt="Twitter"></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h4>Customer Service</h4>
+                <ul>
+                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="#">Hubungi Kami</a></li>
+                    <li><a href="#">Kebijakan Privasi</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Pembayaran</h4>
+                <div class="payment-icons">
+                    <img src="https://i.supaimg.com/7b5fe49a-a708-4a05-8b00-9865481e0e13.jpg" alt="QRIS">
+                    <img src="https://i.supaimg.com/20eaef7a-3a63-4be3-a507-175348ab41de.jpg" alt="Bank Krom">
+                    <img src="https://i.supaimg.com/e4a887fd-41fd-4075-9802-8b65bb52d1cb.jpg" alt="Dana">
+                    <img src="https://i.supaimg.com/104ae434-3bb9-4071-a946-73b301a5ba29.jpg" alt="Gopay">
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 WALZSHOP. All Rights Reserved.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
