--- a/cart.html
+++ b/cart.html
@@ -25,21 +25,23 @@
                         </div>
                         
                         <div class="cart-item">
-                            <img src="https://via.placeholder.com/80" alt="Product Icon" class="cart-item-img" style="border:none;">
+                            <img src="https://i.supaimg.com/3272ce04-c4a0-4025-8d8a-b2723a2f2267.jpg" alt="Product Icon" class="cart-item-img" style="border:none;">
                             <div class="cart-details">
                                 <h3>Produk</h3>
                                 <p id="cart-product-label"></p>
                             </div>
                         </div>
 
-                        <div class="cart-item">
+                        <div class="cart-item payment-info-container">
                             <img id="cart-payment-img" src="" alt="Payment Logo" class="cart-item-img">
                             <div class="cart-details">
                                 <h3>Metode Pembayaran</h3>
                                 <p id="cart-payment-name"></p>
-                                <div id="cart-payment-info"></div>
                             </div>
                         </div>
+
+                        <div id="cart-payment-info" class="cart-payment-details">
+                            </div>
 
                         <div id="cart-total-price" class="total-price"></div>
 
