--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WALZSHOP</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -29,9 +30,9 @@
                 <h4 class="footer-logo">WALZSHOP</h4>
                 <p>Website Top Up Game Terpercaya</p>
                 <div class="social-icons">
-                    <a href="#"><img src="https://files.catbox.moe/8bcn1a.png" alt="Facebook"></a>
-                    <a href="#"><img src="https://files.catbox.moe/7h98v9.png" alt="Instagram"></a>
-                    <a href="#"><img src="https://files.catbox.moe/h1x74e.png" alt="Twitter"></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-telegram-plane"></i></a>
                 </div>
             </div>
             <div class="footer-column">
@@ -41,15 +42,6 @@
                     <li><a href="#">Hubungi Kami</a></li>
                     <li><a href="#">Kebijakan Privasi</a></li>
                 </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Pembayaran</h4>
-                <div class="payment-icons">
-                    <img src="https://i.supaimg.com/7b5fe49a-a708-4a05-8b00-9865481e0e13.jpg" alt="QRIS">
-                    <img src="https://i.supaimg.com/20eaef7a-3a63-4be3-a507-175348ab41de.jpg" alt="Bank Krom">
-                    <img src="https://i.supaimg.com/e4a887fd-41fd-4075-9802-8b65bb52d1cb.jpg" alt="Dana">
-                    <img src="https://i.supaimg.com/104ae434-3bb9-4071-a946-73b301a5ba29.jpg" alt="Gopay">
-                </div>
             </div>
         </div>
         <div class="footer-bottom">
