--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <title>WALZSHOP</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="main-container">
@@ -14,8 +15,8 @@
             <section class="page-container">
                 <div class="container">
                     <h2 class="section-title">Ringkasan Pembelian</h2>
-                    <div class="cart-summary" id="cart-summary">
-                        <div class="cart-item">
+                    <div class="cart-summary-card">
+                        <div class="cart-item-header">
                             <img id="cart-game-img" src="" alt="Game Image" class="cart-item-img">
                             <div class="cart-details">
                                 <h3 id="cart-game-name"></h3>
@@ -23,25 +24,26 @@
                                 <p id="cart-server-id" style="display:none;"></p>
                             </div>
                         </div>
-                        
-                        <div class="cart-item">
-                            <img src="https://i.supaimg.com/3272ce04-c4a0-4025-8d8a-b2723a2f2267.jpg" alt="Product Icon" class="cart-item-img" style="border:none;">
-                            <div class="cart-details">
-                                <h3>Produk</h3>
+
+                        <div class="cart-section">
+                            <div class="section-title-icon"><i class="fas fa-ticket-alt"></i></div>
+                            <div class="section-content">
+                                <h4>Produk</h4>
                                 <p id="cart-product-label"></p>
                             </div>
                         </div>
 
-                        <div class="cart-item payment-info-container">
-                            <img id="cart-payment-img" src="" alt="Payment Logo" class="cart-item-img">
-                            <div class="cart-details">
-                                <h3>Metode Pembayaran</h3>
+                        <div class="cart-section">
+                            <div class="section-title-icon"><i class="fas fa-money-bill-wave"></i></div>
+                            <div class="section-content">
+                                <h4>Metode Pembayaran</h4>
                                 <p id="cart-payment-name"></p>
+                                <img id="cart-payment-img" src="" alt="Payment Logo" class="payment-icon-cart">
                             </div>
                         </div>
 
                         <div id="cart-payment-info" class="cart-payment-details">
-                            </div>
+                        </div>
 
                         <div id="cart-total-price" class="total-price"></div>
 
